# Dataans

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FAQ.md  LICENSE  README.md  fly.toml  rust-toolchain.toml
crates/web-api-types/: Cargo.toml
crates/web-api-types/src/: auth.rs  data.rs  error.rs  lib.rs  sync.rs  user.rs
crates/web-server/: Cargo.toml  README.md  authorize.html  build.rs
crates/web-server/.sqlx/: query-10e5d0dcb5a606df8592e5d16c37e88a0e32c941f46899af21ff9e85c0b2fa38.json  query-153c71369af3a7f9ec6ec2aa8cef2585d96c0db70d86448e505cf8c86fe1a0c5.json  query-21fe003f4d9d8db473297271c972cb6f6f8d3f1834a44d6260838ecfb1891bf3.json  query-30626c3574625fdef2559828b0d61b316196d27ee14799824efc2ea94bbc5e6a.json  query-3ed9e7420373b4d87ae8e62c10e1827cedb8ae8f684b120e6a3c0268156d883e.json  query-4ef524a22dfd7c7c45a240f156ba35aeb50179cd1873cfc9d88d1263cfc871bc.json  query-4efb6662db50a4d67e7b7d6ae45897c54009ebcd4f63bf56547c46f85cb076b2.json  query-53ae9f96d8d1158c17263ded81b758ab3bb179e275e0deb26330ea3287a0480b.json  query-73a797d6234f8ffedfa0134240fde806625e61e24cd540628bef8ee1d9855862.json  query-75984a8df0a05ca1ee75f6c925e27389a45359d040da12e03d349da016bf357e.json  query-be4fb7cb60a03758635c691fdc39959f9478c53e95f0844a6c20f10f8e32e1d8.json  query-d5763be047e151d8a196d7a6a41f8a79d191cbcfcf84396262f28dddb089d532.json  query-d9e608cc439919429c8a9bf3e27dd5d10fe3260634c7a56c51e04043fa99dd6f.json  query-e476295de7bbf205eb11c2a4046c46c9352f30eb4c32bad44714b9053841fd58.json  query-f6d11f61b127952f84dbf28e2070195f56cda57eba7b84f8d9bd7628601ce280.json
crates/web-server/migrations/: 20250105131854_init_auth_schema.sql  20250105200510_remove_session_token_column.sql  20250106183944_timestamp_with_timezone.sql  20250112170705_invitation_token_constraint.sql  20250119120720_add_user_data_tables.sql  20250125224549_add_on_delete_cascade_constraint.sql  20250614182130_init_operations_table_and_remove_others.sql  20250622075713_init_db.sql  20251003185732_user_table.sql  20251003190725_user_secret_key_hash.sql
crates/web-server/src/: crypto.rs  error.rs  logging.rs  main.rs
dataans/: .gitignore  .taurignore  Cargo.toml  README.md  index.html
dataans/.sqlx/: query-3111f54fb6717a0b7725283e890171c312b4677e658a3a0090f295d49e5fca2a.json  query-616bd75ab7def23b34128b165745fbc5bebf268bf969e50835e6b3abb924746d.json  query-716cb462910879842922d544e5ef646ee8d26678116157161dc45b66d17b0257.json  query-885bf7cd9672e3c19be6e92f48e144c81e1063a32bd2d4098806bde0c1606fa1.json  query-a13e83655503b60ce890f51e6314357081272bde811c22b87fc1a3f1e360b682.json  query-b7163fca3578daeaa4692cfebb74dd8f02330a4b75b0f1fbe11bd0d5d1652a31.json  query-db8fe09c75473c4a4efe1721f9b3cac0b816f93f44dbbd9ec9f75e43891f7b52.json  query-fbce94c09b46d54d59d751c01d29a6d69517263b1f6f04081ce02bb0556d92de.json
dataans/common/: Cargo.toml  README.md
dataans/common/src/: error.rs  event.rs  export.rs  key_bindings.rs  lib.rs  note.rs  profile.rs  space.rs
dataans/public/css/: auth.css  confirm.css  layout.css  modal.css  notes.css  profile.css  properties.css  spaces.css  textarea.css
dataans/src/: app.rs  macros.rs  main.rs  utils.rs  uuid.rs
dataans/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
dataans/src-tauri/.sqlx/: query-05006b8e2dd28898d636f7fd3f98fd9a6375a33a6a552995e80d705a3b51e67c.json  query-1bc25f0ccc611e13713c7099d706cc94d9c19a46eca1b275c89639fc070d2175.json  query-2d754401b04dbf764867a597ee8ddfae1b8b3cb2e3b77892620ce5f6ae765313.json  query-380e5be5af7f587c538f8ae4577ded2f73b29647ba5c83abec9001867d47b44b.json  query-4b213bf56957d2a8f41e1d0b79a11dc82316f140955e5cd7cb93ac094f37d295.json  query-4ccf57e979b9fe0af772a2ff0023b5eab20f85d8bb5298e2ca4d59b779fea383.json  query-5b3bc03863cdc743428d7447af25fddf3bfd8c2c615121d980f93a6a0ce9909a.json  query-5c16d40c2f9535db3063e03c97df52a18e489554c82f62bedbc33b3d58c3bda9.json  query-77a756c1d9264cd5217ca4a5be68b6757b681cb1ec0d470f8fe82ed10e4071cb.json  query-7cc62e4c38b2a18f190cf5fdf28a0ae4dddbaa01ad5c46b33402457e40d8b4bf.json  query-8e05fce15823a4c8c4c7cb498e3e95072207e2757468edacc7a39db6a8da5d85.json  query-b798acebf1306d5e8b5fbcdb405ef200f9e60dac1a748e9da09744c2b2874464.json  query-b7d40d85264ae53a40c76e934d0e009e29d309b6007b3a9d9e83ce6f5191ac1e.json  query-bdb36833abb30192172355e6e2f51064fdbf408c01d1a7029a86026a6c0ffd0f.json  query-d1fe1e219b59f3958fc58bff1dd866b7ed10e750c5503a646c315ecf4618b37d.json  query-ebcb8659fac19b5da0de863f59dbb81487840dd1e39c8d28c2e48de65f40cb26.json
dataans/src-tauri/capabilities/: app-info.json  auth-and-sync.json  cf-auth.json  desktop.json  migrated.json
dataans/src-tauri/icons/: icon.icns
dataans/src-tauri/migrations/: 20241210221629_init_db_schema.sql  20250131211734_add_is_synced_attribute.sql  20250216193340_add_updated_at_attribute.sql  20250216204502_set_correct_update_time.sql  20250307202320_entity_hash.sql  20250307203036_add_checksums_table.sql  20250314194444_remove_unneeded_columns.sql  20250608152246_remove_checksum_columns.sql  20250608183421_create_operations_table.sql  20250613205259_soft_deletion_support.sql  20250615105805_file_timestamps.sql  20250616183856_remote_operation_name_column.sql  20250622082123_sync_support.sql  20250623181710_files_sync.sql
dataans/src-tauri/src/: code_block.rs  config.rs  dialog.rs  file.rs  image.rs  main.rs  window.rs
dataans/src/app_info/: app_info.rs  app_info_window.rs  export.rs  import.rs  mod.rs  sync_settings.rs  toggle.rs
dataans/src/auth/: mod.rs
dataans/src/backend/: auth.rs  autostart.rs  export.rs  file.rs  import.rs  mod.rs  notes.rs  spaces.rs  window.rs
dataans/src/common/: attachment.rs  confirmation.rs  file.rs  mod.rs  modal.rs  switch.rs  textarea.rs
dataans/src/dom/: element.rs  keyboard.rs  mod.rs
dataans/src/notes/: editor.rs  info.rs  md_node.rs  mod.rs  note.rs  note_preview.rs
totes/: .gitignore  .taurignore  Cargo.toml  README.md  build.rs  index.html
totes/common/: Cargo.toml
totes/configs/: config.toml  theme_dark.toml  theme_light.toml
totes/src/: app.rs  main.rs  utils.rs
totes/src-tauri/: Cargo.toml  tauri.conf.json
(+145 files in other folders)
