[workspace]
resolver = "2"
members = ["dataans/common", "dataans/src-tauri", "dataans", "crates/web-server", "crates/web-api-types", "crates/sync-common"]

[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/TheBestTvarynka/Dataans"
repository = "https://github.com/TheBestTvarynka/Dataans"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]

[workspace.dependencies]
web-api-types = { path = "crates/web-api-types" }
sync-common = { path = "crates/sync-common" }
sha2 = "0.10"
aes-gcm = { version = "0.10", features = ["std"] }
hmac = "0.12"

sqlx = "0.8"
thiserror = "2.0"
time = { version = "0.3" , default-features = false }
uuid = { version = "1.11", default-features = false }
tracing = "0.1"
serde = "1"
rocket = "0.5"
nutype = "0.5"
hex = "0.4"
futures = "0.3"
url = "2.5"
derive_more = "1.0"
