[workspace]
resolver = "2"
members = ["dataans/common", "dataans/src-tauri", "dataans", "crates/web-server", "crates/web-api-types"]

[workspace.package]
edition = "2024"
license = "MIT"
homepage = "https://github.com/TheBestTvarynka/Dataans"
repository = "https://github.com/TheBestTvarynka/Dataans"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]

[workspace.dependencies]
web-api-types = { path = "crates/web-api-types" }
sha2 = "0.10"
aes-gcm = { version = "0.11.0-rc.0" }
hmac = "0.12"

sqlx = "0.8"
thiserror = "2.0"
time = { version = "0.3" , default-features = false }
uuid = { version = "1.18", default-features = false }
tracing = "0.1"
serde = "1"
rocket = "0.5"
futures = "0.3"
url = "2.5"
derive_more = "1.0"
reqwest = "0.12"

tokio = "1.47"