[package]
name = "dataans-ui"
version = "0.2.1"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/dataans"

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["macros", "wasm-bindgen"] }
uuid = { workspace = true, features = ["v4", "js"] }

leptos = { version = "0.6", features = ["csr"] }

# TODO: The main branch contains an important fix which is not released yet.
# Replace `git` link with proper version when a new releave will be published:
leptos_hotkeys = { git = "https://github.com/gaucho-labs/leptos-hotkeys.git", rev = "05b1dcd" }
leptoaster = { git = "https://github.com/TheBestTvarynka/leptoaster.git", rev = "8c06d3f" }

gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"
common = { path = "./common" }
markdown = { version = "1.0.0-alpha.17", features = ["log"] }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "Blob",
    "Document",
    "Element",
    "HtmlTextAreaElement",
    "FileList",
    "HtmlInputElement",
    "HtmlElement",
    "HtmlSelectElement",
] }
futures = { version = "0.3", features = ["std", "alloc"] }

[workspace]
resolver = "2"
members = ["common", "src-tauri"]

[workspace.dependencies]
time = { version = "0.3" , default-features = false }
uuid = { version = "1.16", default-features = false }
tracing = "0.1"
serde = "1"
