[package]
name = "dataans-ui"
version = "0.3.0"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, features = ["macros", "wasm-bindgen"] }
uuid = { workspace = true, features = ["v4", "js"] }
url = { workspace = true, features = ["serde"]}
futures = { workspace = true, features = ["std", "alloc"] }

leptos = { version = "0.8", features = ["csr"] }
leptos-use = "0.16"
leptos_router = "0.8"
leptoaster = { version = "0.2", features = ["csr"] }

# Logging.
tracing = "0.1"
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "ansi", "env-filter"] }

gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
common = { path = "./common" }
markdown = { version = "1.0", features = ["log"] }
web-sys = { version = "0.3", features = [
    "Clipboard",
    "Navigator",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "Blob",
    "Document",
    "Element",
    "HtmlTextAreaElement",
    "FileList",
    "HtmlInputElement",
    "HtmlElement",
    "HtmlSelectElement",
] }
regex = "1.11.2"
