[package]
name = "totes-ui"
version = "0.1.0"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/totes"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
wasm-logger = "0.2.0"
common = { path = "./common" }
markdown = { version = "1.0.0-alpha.17", features = ["log"]}
time = {  version = "0.3.36", features = ["macros"] }

[workspace]
members = ["common", "src-tauri"]
