[package]
name = "totes-ui"
version = "0.1.0"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/totes"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
wasm-logger = "0.2.0"
common = { path = "./common" }
markdown = { version = "1.0.0-alpha.17", features = ["log"]}
time = {  version = "0.3.36", features = ["macros", "wasm-bindgen"] }
uuid = { version = "1.6.1", features = ["v4"] }
web-sys = { version = "0.3.69", features = ["Clipboard", "Navigator", "ClipboardEvent", "DataTransfer", "DataTransferItem", "DataTransferItemList", "File", "Blob", "Document", "Element", "HtmlTextAreaElement", "FileList", "HtmlInputElement"] }
futures = { version = "0.3.30", features = ["std", "alloc"] }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy", "metadata"] }

[workspace]
members = ["common", "src-tauri"]
