[package]
name = "web-api-types"
version = "0.1.0"
description = "Common web API types for client and server"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
server = ["dep:rocket"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
rocket = { workspace = true, optional = true }
uuid.workspace = true

nutype = { version = "0.5", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"