[package]
name = "web-api-types"
version = "0.1.0"
description = "Common web API types for client and server"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
server = ["dep:rocket"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
rocket = { workspace = true, optional = true, features = ["json"] }
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }

nutype = { version = "0.5", features = ["serde"] }

[dev-dependencies]
serde_json = "1.0"