[package]
name = "web-api-types"
version = "0.1.0"
description = "Common web API types for client and server"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[features]
server = ["dep:rocket"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
rocket = { workspace = true, optional = true, features = ["json", "uuid"] }
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde", "formatting", "parsing"] }
nutype = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from", "as_ref", "into", "deref"] }

[dev-dependencies]
serde_json = "1.0"