[package]
name = "web-server"
version = "0.1.0"
description = "Web-server for data synchronization and backup"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
web-api-types = { workspace = true, features = ["server"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "time", "uuid", "postgres", "migrate"] }
thiserror.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
tracing.workspace = true
time = { workspace = true }
rocket = { workspace = true, features = ["json"] }
hex.workspace = true
futures.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
hmac.workspace = true

# logging
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi", "env-filter"] }

# crypto
argon2 = { version = "0.5", features = ["std"] }

[dev-dependencies]
tokio = { version = "1.43", features = ["full"] }
