[package]
name = "common"
version = "0.2.1"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/dataans"

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, default-features = false, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
bson = "2.10"
