[package]
name = "common"
version = "0.2.1"
description = "Common code between Tauri backend and frontend"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, default-features = false, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
bson = "2.10"
