[package]
name = "common"
version = "0.2.1"
description = "Common code between Tauri backend and frontend"
readme = "README.md"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
time = { workspace = true, default-features = false, features = ["serde", "formatting", "parsing"] }
uuid = { workspace = true, features = ["serde"] }
web-api-types.workspace = true
url.workspace = true
derive_more = { workspace = true, features = ["from", "as_ref", "into"] }
