[package]
name = "dataans"
version = "0.1.0"
description = "Take notes in the form of markdown snippets grouped into spaces."
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/dataans"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "protocol-asset", "tray-icon",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi", "env-filter"] }
tracing = "0.1"

common = { path = "../common" }
toml = "0.8"
polodb_core = "4.4"
# TODO: move to workspace dependencies.
time = { version = "0.3", features = ["macros"] }
# TODO: move to workspace dependencies.
uuid = { version = "1.6", features = ["serde", "v4"] }
avatar_generator = { git = "https://gitlab.com/dataans/tools.git", rev = "0a3f1c526d86e223216ab0cb26afa076cfddc363", package = "image" }
opener = { version = "0.7", features = ["reveal"] }
image = "0.25"
arboard = "3.4"
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
    "metadata",
] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
