[package]
name = "dataans"
version = "0.2.1"
description = "Take notes in the form of markdown snippets grouped into spaces."
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/dataans"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
time = { workspace = true, features = ["macros", "formatting"] }
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "uuid", "time", "migrate"] }
tracing.workspace = true
thiserror.workspace = true
web-api-types.workspace = true
hex.workspace = true
futures.workspace = true
url.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true

tauri = { version = "2", features = [
    "protocol-asset", "tray-icon",
] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tokio-stream = "0.1"

# logging
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi", "env-filter"] }

common = { path = "../common" }
toml = "0.8"

avatar_generator = { git = "https://gitlab.com/dataans/tools.git", rev = "0a3f1c526d86e223216ab0cb26afa076cfddc363", package = "image" }
opener = { version = "0.7", features = ["reveal"] }
image = "0.25"
arboard = "3.4"
syntect = { version = "5.2", default-features = false, features = [
    "default-fancy",
    "metadata",
] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "http2"] }
rand = { version = "0.8", features = ["getrandom"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
