[package]
name = "dataans"
version = "0.3.0"
description = "Take notes in the form of markdown snippets grouped into spaces."
authors.workspace = true
edition.workspace = true
repository.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
time = { workspace = true, features = ["macros", "formatting"] }
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "uuid", "time", "migrate"] }
tracing.workspace = true
thiserror.workspace = true
web-api-types.workspace = true
futures.workspace = true
url.workspace = true
aes-gcm.workspace = true
hmac.workspace = true
sha2.workspace = true
reqwest = { workspace = true, features = ["json", "rustls-tls", "http2"] }

tauri = { version = "2", features = [
    "protocol-asset", "tray-icon",
] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tokio = { workspace = true, features = ["fs"] }
tokio-stream = "0.1"

# logging
tracing-subscriber = { version = "0.3", features = ["std", "fmt", "ansi", "env-filter"] }

common = { path = "../common" }
toml = "0.9"
base64ct = "1.8"

avatar_generator = { git = "https://gitlab.com/dataans/tools.git", rev = "0a3f1c526d86e223216ab0cb26afa076cfddc363", package = "image" }
opener = { version = "0.8", features = ["reveal"] }
image = "0.25"
arboard = "3.6"
syntect = "5.2"
serde_json = "1"
rand = "0.9"
pbkdf2 = "0.12"
phraze = "0.3"
argon2 = { version = "0.5", features = ["std"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "fs"] }
