[package]
name = "totes"
version = "0.1.0"
description = "t[elegram n]otes"
authors = ["Pavlo Myroniuk <the.best.tvarynka@gmail.com>"]
edition = "2021"
repository = "https://github.com/TheBestTvarynka/totes"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "protocol-asset", "shell-open", "fs-all", "system-tray", "global-shortcut"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4.21"
common = { path = "../common" }
toml = "0.8.12"
polodb_core = "4.4.1"
# TODO: move to workspace dependencies.
time = {  version = "0.3.36", features = ["macros"] }
# TODO: move to workspace dependencies.
uuid = { version = "1.6.0", features = ["serde", "v4"] }
avatar_generator = { git = "https://gitlab.com/dataans/tools.git", rev = "0a3f1c526d86e223216ab0cb26afa076cfddc363", package = "image" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
